--- a/MLBFinalProject.ipynb
+++ b/MLBFinalProject.ipynb
@@ -3347,7 +3347,7 @@
        "      <td>112</td>\n",
        "      <td>...</td>\n",
        "      <td>.769</td>\n",
-       "      <td>107</td>\n",
+       "      <td>108</td>\n",
        "      <td>853</td>\n",
        "      <td>42</td>\n",
        "      <td>32</td>\n",
@@ -3374,7 +3374,7 @@
        "26  TBR   43   27.1  4.82   60  2261  1975  289   470  105  ...  .753  112   \n",
        "27  TEX   49   27.4  3.73   60  2147  1936  224   420   80  ...  .648   75   \n",
        "28  TOR   49   25.9  5.03   60  2263  2023  302   516  104  ...  .766  109   \n",
-       "29  WSN   43   28.6  4.88   60  2218  1968  293   519  112  ...  .769  107   \n",
+       "29  WSN   43   28.6  4.88   60  2218  1968  293   519  112  ...  .769  108   \n",
        "\n",
        "      TB  GDP HBP  SH  SF IBB   LOB Season  \n",
        "0   2659  126  47  47  43  43  1173   2000  \n",
@@ -3598,7 +3598,7 @@
        "      <td>58</td>\n",
        "      <td>58</td>\n",
        "      <td>...</td>\n",
-       "      <td>108</td>\n",
+       "      <td>110</td>\n",
        "      <td>4.58</td>\n",
        "      <td>1.226</td>\n",
        "      <td>7.2</td>\n",
@@ -3646,7 +3646,7 @@
        "      <td>60</td>\n",
        "      <td>60</td>\n",
        "      <td>...</td>\n",
-       "      <td>93</td>\n",
+       "      <td>94</td>\n",
        "      <td>4.88</td>\n",
        "      <td>1.384</td>\n",
        "      <td>8.3</td>\n",
@@ -3718,9 +3718,9 @@
        "3   BAL  22  29.1  5.64  74  88  .457  5.37  162  162  ...   88  5.01  1.543   \n",
        "4   BOS  24  30.2  4.60  85  77  .525  4.23  162  162  ...  120  4.29  1.329   \n",
        "..  ...  ..   ...   ...  ..  ..   ...   ...  ...  ...  ...  ...   ...    ...   \n",
-       "25  STL  26  27.6  3.95  30  28  .517  3.90   58   58  ...  108  4.58  1.226   \n",
+       "25  STL  26  27.6  3.95  30  28  .517  3.90   58   58  ...  110  4.58  1.226   \n",
        "26  TBR  25  28.1  3.82  40  20  .667  3.56   60   60  ...  116  3.94  1.219   \n",
-       "27  TEX  25  28.7  5.20  22  38  .367  5.02   60   60  ...   93  4.88  1.384   \n",
+       "27  TEX  25  28.7  5.20  22  38  .367  5.02   60   60  ...   94  4.88  1.384   \n",
        "28  TOR  29  29.5  5.20  32  28  .533  4.60   60   60  ...   95  4.73  1.462   \n",
        "29  WSN  24  30.8  5.02  26  34  .433  5.09   60   60  ...   88  5.02  1.517   \n",
        "\n",
@@ -4263,177 +4263,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Tm</th>\n",
-       "      <th>W</th>\n",
-       "      <th>L</th>\n",
-       "      <th>W-L%</th>\n",
-       "      <th>GB</th>\n",
-       "      <th>Season</th>\n",
-       "      <th>Tm_Abbrev</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>Oakland Athletics</td>\n",
-       "      <td>91</td>\n",
-       "      <td>70</td>\n",
-       "      <td>0.565</td>\n",
-       "      <td>--</td>\n",
-       "      <td>2000</td>\n",
-       "      <td>OAK</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>Seattle Mariners</td>\n",
-       "      <td>91</td>\n",
-       "      <td>71</td>\n",
-       "      <td>0.562</td>\n",
-       "      <td>0.5</td>\n",
-       "      <td>2000</td>\n",
-       "      <td>SEA</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>Anaheim Angels</td>\n",
-       "      <td>82</td>\n",
-       "      <td>80</td>\n",
-       "      <td>0.506</td>\n",
-       "      <td>9.5</td>\n",
-       "      <td>2000</td>\n",
-       "      <td>ANA</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>Texas Rangers</td>\n",
-       "      <td>71</td>\n",
-       "      <td>91</td>\n",
-       "      <td>0.438</td>\n",
-       "      <td>20.5</td>\n",
-       "      <td>2000</td>\n",
-       "      <td>TEX</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>San Francisco Giants</td>\n",
-       "      <td>97</td>\n",
-       "      <td>65</td>\n",
-       "      <td>0.599</td>\n",
-       "      <td>--</td>\n",
-       "      <td>2000</td>\n",
-       "      <td>SFG</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>Chicago Cubs</td>\n",
-       "      <td>34</td>\n",
-       "      <td>26</td>\n",
-       "      <td>0.567</td>\n",
-       "      <td>--</td>\n",
-       "      <td>2020</td>\n",
-       "      <td>CHC</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>St. Louis Cardinals</td>\n",
-       "      <td>30</td>\n",
-       "      <td>28</td>\n",
-       "      <td>0.517</td>\n",
-       "      <td>3.0</td>\n",
-       "      <td>2020</td>\n",
-       "      <td>STL</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>Cincinnati Reds</td>\n",
-       "      <td>31</td>\n",
-       "      <td>29</td>\n",
-       "      <td>0.517</td>\n",
-       "      <td>3.0</td>\n",
-       "      <td>2020</td>\n",
-       "      <td>CIN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>Milwaukee Brewers</td>\n",
-       "      <td>29</td>\n",
-       "      <td>31</td>\n",
-       "      <td>0.483</td>\n",
-       "      <td>5.0</td>\n",
-       "      <td>2020</td>\n",
-       "      <td>MIL</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>Pittsburgh Pirates</td>\n",
-       "      <td>19</td>\n",
-       "      <td>41</td>\n",
-       "      <td>0.317</td>\n",
-       "      <td>15.0</td>\n",
-       "      <td>2020</td>\n",
-       "      <td>PIT</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>630 rows × 7 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "                      Tm   W   L   W-L%    GB  Season Tm_Abbrev\n",
-       "0      Oakland Athletics  91  70  0.565    --    2000       OAK\n",
-       "1       Seattle Mariners  91  71  0.562   0.5    2000       SEA\n",
-       "2         Anaheim Angels  82  80  0.506   9.5    2000       ANA\n",
-       "3          Texas Rangers  71  91  0.438  20.5    2000       TEX\n",
-       "0   San Francisco Giants  97  65  0.599    --    2000       SFG\n",
-       "..                   ...  ..  ..    ...   ...     ...       ...\n",
-       "0           Chicago Cubs  34  26  0.567    --    2020       CHC\n",
-       "1    St. Louis Cardinals  30  28  0.517   3.0    2020       STL\n",
-       "2        Cincinnati Reds  31  29  0.517   3.0    2020       CIN\n",
-       "3      Milwaukee Brewers  29  31  0.483   5.0    2020       MIL\n",
-       "4     Pittsburgh Pirates  19  41  0.317  15.0    2020       PIT\n",
-       "\n",
-       "[630 rows x 7 columns]"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "season_standings.loc[season_standings['Tm'] == \"Anaheim Angels\", \"Tm_Abbrev\"] = \"ANA\"\n",
     "season_standings.loc[season_standings['Tm'] == \"Los Angeles Angels\", \"Tm_Abbrev\"] = \"LAA\"\n",
@@ -4854,7 +4686,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "all_stats.to_csv(\"SAL384FinalData.csv\")"
+    "all_stats.to_csv(\"SAL384FinalData.csv\", index = false)"
    ]
   }
  ],
